--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -6,9 +6,9 @@
     <MudNavLink Href="contacts" IconColor="Color.Primary" Icon="fas fa-address-book">
         Contacts
     </MudNavLink>
-    <MudNavLink Href="settings" IconColor="Color.Primary" Icon="fas fa-cog">
+    @*<MudNavLink Href="settings" IconColor="Color.Primary" Icon="fas fa-cog">
         Settings
-    </MudNavLink>
+    </MudNavLink>*@
 </MudNavMenu>
 
 
