Final commit. Publishing

--- a/Client/Pages/Login.razor
+++ b/Client/Pages/Login.razor
@@ -31,7 +31,7 @@
             <div class="py-2">
                 <span><b>Login using</b>&nbsp;<i class="fab fa-google"></i>&nbsp;<i class="fab fa-facebook"></i>&nbsp;<i class="fab fa-twitter"></i></span>
             </div>
-            <div class="py-2">
+            @*<div class="py-2">
                 <a class="btn btn-block btn-social btn-twitter" @onclick="TwitterSignIn">
                     <span class="fa fa-twitter"></span><b> Sign in with Twitter</b>
                 </a>
@@ -42,7 +42,7 @@
                     <span class="fa fa-google"></span><b> Sign in with Google</b>
                 </a>
 
-            </div>
+            </div>*@
             <div class="py-2">
                 <a class="btn btn-block btn-social btn-facebook" @onclick="FacebookJWT">
                     <span class="fa fa-facebook"></span><b> Sign in with Facebook</b>
