--- a/Client/Pages/SignUp.razor
+++ b/Client/Pages/SignUp.razor
@@ -48,8 +48,8 @@
                     <br />
                     <hr />
                     <div class="py-2">
-                        <p><i class="fas fa-exclamation-circle"></i> If you have a social media account ie. Google, 
-                        Facebook or Twitter you can skip registation and login directly via social media.<a href="login">Login</a>
+                        <p><i class="fas fa-exclamation-circle"></i> If you have a Facebook social media account 
+                        you can skip registation and login directly via social media.<a href="login">Login</a>
                         </p>
                     </div>
  
